--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <meta property="twitter:description" content="Test your internet speed, check your IP, monitor latency, and generate secure passwords. All in one free dashboard." />
 
     <meta name="theme-color" content="#020617" />
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2587782641982436"
+     crossorigin="anonymous"></script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
